# lpc-fase-1

./: README.md  pyproject.toml
app/: main.py
